[package]
name = "krak"
version = "0.1.0"
authors = ["Ajay Rathore <rathore.ajay@gmail.com>"]
edition = "2018"

[dependencies]
rkdb = "0.4.0"
avro-rs = "0.13.0"
schema_registry_converter = { version = "2.0.2", default-features = false, features = ["avro", "blocking"] }
lazy_static = "1.4.0"

[lib]
name = "krak"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
